Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -184,142 +184,149 @@ jobs:
     - task: PowerShell@2
       displayName: "📊 Monitor Parallel Deployments"
       inputs:
-        targetType: inline
-        script: |
-          Write-Host "════════════════════════════════════════════════"
-          Write-Host "    Monitoring Parallel Deployments"
-          Write-Host "════════════════════════════════════════════════"
-          
-          $renderApiKey = "$(RENDER_API_KEY)"
-          
-          # Service configurations
-          $services = @(
-              @{
-                  Name = "Backend"
-                  ServiceId = "srv-d2rejiuuk2gs73883gog"
-                  HealthUrl = "https://api.lunchmonkeys.bluemonkeysaapp.nl/api/health"
-                  Complete = $false
-                  Status = "pending"
-              },
-              @{
-                  Name = "Frontend"
-                  ServiceId = "srv-d2reover433s73fiir2g"
-                  HealthUrl = "https://lunchmonkeys.bluemonkeysaapp.nl"
-                  Complete = $false
-                  Status = "pending"
-              }
-          )
-          
-          $maxWaitMinutes = 15
-          $checkInterval = 30
-          $maxAttempts = [math]::Floor($maxWaitMinutes * 60 / $checkInterval)
-          $attempt = 0
-          
-          Write-Host "`n⏱️ Max wait time: $maxWaitMinutes minutes"
-          Write-Host "🔄 Check interval: $checkInterval seconds"
-          
-          # Monitor both deployments
-          while ($attempt -lt $maxAttempts) {
-              $attempt++
-              
-              Write-Host "`n════════════════════════════════════════════════"
-              Write-Host " Check $attempt/$maxAttempts"
-              Write-Host "════════════════════════════════════════════════"
-              
-              foreach ($service in $services) {
-                  if (-not $service.Complete) {
-                      Write-Host "`n🔍 Checking $($service.Name)..."
-                      
-                      try {
-                          $headers = @{
-                              "Authorization" = "Bearer $renderApiKey"
-                              "Accept" = "application/json"
-                          }
-                          
-                          $statusUrl = "https://api.render.com/v1/services/$($service.ServiceId)/deploys?limit=1"
-                          $statusResponse = Invoke-RestMethod -Uri $statusUrl -Headers $headers -Method GET
-                          
-                          if ($statusResponse) {
-                              # Handle both array and object responses
-                              $deploys = if ($statusResponse -is [Array]) { 
-                                  $statusResponse 
-                              } elseif ($statusResponse.deploys) { 
-                                  $statusResponse.deploys 
-                              } else { 
-                                  $null 
-                              }
-                              
-                              if ($deploys -and $deploys.Count -gt 0) {
-                                  $latestDeploy = $deploys[0]
-                                  $deployStatus = $latestDeploy.status
-                                  $service.Status = $deployStatus
-                                  
-                                  Write-Host "  📊 Status: $deployStatus"
-                                  
-                                  switch ($deployStatus) {
-                                      "live" {
-                                          Write-Host "  ✅ $($service.Name) is LIVE!"
-                                          $service.Complete = $true
-                                      }
-                                      "build_failed" {
-                                          Write-Host "  ❌ $($service.Name) build FAILED!"
-                                          exit 1
-                                      }
-                                      "canceled" {
-                                          Write-Host "  ⚠️ $($service.Name) deployment CANCELED!"
-                                          exit 1
-                                      }
-                                      default {
-                                          Write-Host "  ⏳ Still deploying..."
-                                      }
-                                  }
-                              } else {
-                                  Write-Host "  ⚠️ No deployment data found"
-                              }
-                          } else {
-                              Write-Host "  ⚠️ Empty response from API"
-                          }
-                      } catch {
-                          Write-Host "  ⚠️ Error checking status: $_"
-                      }
-                  } else {
-                      Write-Host "`n✅ $($service.Name): Already complete"
-                  }
-              }
-              
-              # Check if all services are complete AFTER checking all services
-              $allComplete = $true
-              foreach ($service in $services) {
-                  if (-not $service.Complete) {
-                      $allComplete = $false
-                      break
-                  }
-              }
-              
-              if ($allComplete) {
-                  Write-Host "`n🎉 All deployments complete!"
-                  break
-              }
-              
-              if ($attempt -lt $maxAttempts) {
-                  Write-Host "`n⏳ Waiting $checkInterval seconds before next check..."
-                  Start-Sleep -Seconds $checkInterval
-              }
-          }
-          
-          # Final status check
-          $backendComplete = $services[0].Complete
-          $frontendComplete = $services[1].Complete
-          
-          if (-not $backendComplete -or -not $frontendComplete) {
-              Write-Host "`n❌ Deployment timeout!"
-              if (-not $backendComplete) { Write-Host "  - Backend: $($services[0].Status)" }
-              if (-not $frontendComplete) { Write-Host "  - Frontend: $($services[1].Status)" }
-              exit 1
-          }
-          
-          Write-Host "`n✅ Both services successfully deployed!"
-              
+       targetType: inline
+       script: |
+         Write-Host "════════════════════════════════════════════════"
+         Write-Host "    Monitoring Parallel Deployments"
+         Write-Host "════════════════════════════════════════════════"
+         
+         $renderApiKey = "$(RENDER_API_KEY)"
+         
+         # Service configurations
+         $services = @(
+             @{
+                 Name = "Backend"
+                 ServiceId = "srv-d2rejiuuk2gs73883gog"
+                 HealthUrl = "https://api.lunchmonkeys.bluemonkeysaapp.nl/api/health"
+                 Complete = $false
+                 Status = "pending"
+             },
+             @{
+                 Name = "Frontend"
+                 ServiceId = "srv-d2reover433s73fiir2g"
+                 HealthUrl = "https://lunchmonkeys.bluemonkeysaapp.nl"
+                 Complete = $false
+                 Status = "pending"
+             }
+         )
+         
+         $maxWaitMinutes = 5
+         $checkInterval = 10
+         $maxAttempts = [math]::Floor($maxWaitMinutes * 60 / $checkInterval)
+         $attempt = 0
+         
+         Write-Host "`n⏱️ Max wait time: $maxWaitMinutes minutes"
+         Write-Host "🔄 Check interval: $checkInterval seconds"
+         Write-Host "📊 Max attempts: $maxAttempts"
+         
+         # Monitor both deployments
+         while ($attempt -lt $maxAttempts) {
+             $attempt++
+             
+             Write-Host "`n════════════════════════════════════════════════"
+             Write-Host " Check $attempt/$maxAttempts"
+             Write-Host "════════════════════════════════════════════════"
+             
+             foreach ($service in $services) {
+                 if (-not $service.Complete) {
+                     Write-Host "`n🔍 Checking $($service.Name)..."
+                     
+                     try {
+                         $headers = @{
+                             "Authorization" = "Bearer $renderApiKey"
+                             "Accept" = "application/json"
+                         }
+                         
+                         $statusUrl = "https://api.render.com/v1/services/$($service.ServiceId)/deploys?limit=1"
+                         $statusResponse = Invoke-RestMethod -Uri $statusUrl -Headers $headers -Method GET
+                         
+                         if ($statusResponse) {
+                             # De API geeft een array terug met objecten die een 'deploy' property hebben
+                             if ($statusResponse -is [Array] -and $statusResponse.Count -gt 0 -and $statusResponse[0].deploy) {
+                                 $latestDeploy = $statusResponse[0].deploy
+                                 $deployStatus = $latestDeploy.status
+                                 $service.Status = $deployStatus
+                                 
+                                 # Haal commit info op
+                                 $commitMessage = if ($latestDeploy.commit.message) { 
+                                     $latestDeploy.commit.message.Substring(0, [Math]::Min(50, $latestDeploy.commit.message.Length)) 
+                                 } else { 
+                                     "No message" 
+                                 }
+                                 
+                                 Write-Host "  📊 Status: $deployStatus"
+                                 Write-Host "  📝 Commit: $commitMessage"
+                                 
+                                 switch ($deployStatus) {
+                                     "live" {
+                                         Write-Host "  ✅ $($service.Name) is LIVE!"
+                                         $service.Complete = $true
+                                     }
+                                     "build_failed" {
+                                         Write-Host "  ❌ $($service.Name) build FAILED!"
+                                         exit 1
+                                     }
+                                     "canceled" {
+                                         Write-Host "  ⚠️ $($service.Name) deployment CANCELED!"
+                                         exit 1
+                                     }
+                                     "building" {
+                                         Write-Host "  🔨 Building..."
+                                     }
+                                     "deploying" {
+                                         Write-Host "  📦 Deploying..."
+                                     }
+                                     default {
+                                         Write-Host "  ⏳ Status: $deployStatus"
+                                     }
+                                 }
+                             } else {
+                                 Write-Host "  ⚠️ Unexpected API response structure"
+                             }
+                         } else {
+                             Write-Host "  ⚠️ Empty response from API"
+                         }
+                     } catch {
+                         Write-Host "  ⚠️ Error checking status: $_"
+                     }
+                 } else {
+                     Write-Host "`n✅ $($service.Name): Already complete"
+                 }
+             }
+             
+             # Check if all services are complete AFTER checking all services
+             $allComplete = $true
+             foreach ($service in $services) {
+                 if (-not $service.Complete) {
+                     $allComplete = $false
+                     break
+                 }
+             }
+             
+             if ($allComplete) {
+                 Write-Host "`n🎉 All deployments complete!"
+                 break
+             }
+             
+             if ($attempt -lt $maxAttempts) {
+                 Write-Host "`n⏳ Waiting $checkInterval seconds before next check..."
+                 Start-Sleep -Seconds $checkInterval
+             }
+         }
+         
+         # Final status check
+         $backendComplete = $services[0].Complete
+         $frontendComplete = $services[1].Complete
+         
+         if (-not $backendComplete -or -not $frontendComplete) {
+             Write-Host "`n❌ Deployment timeout!"
+             if (-not $backendComplete) { Write-Host "  - Backend: $($services[0].Status)" }
+             if (-not $frontendComplete) { Write-Host "  - Frontend: $($services[1].Status)" }
+             exit 1
+         }
+         
+         Write-Host "`n✅ Both services successfully deployed!"
+
     # STAP 3: Health checks voor beide services
     - task: PowerShell@2
       displayName: "🏥 Verify Health Status"
